resolve server-test errors